[gd_scene load_steps=6 format=3 uid="uid://dn4xrk76ks7wt"]

[ext_resource type="Script" path="res://Scenes/ui/levels.gd" id="1_6is4l"]
[ext_resource type="Texture2D" uid="uid://evk8cpgj3ces" path="res://Assets/Background/Green.png" id="1_7mhej"]
[ext_resource type="Texture2D" uid="uid://c260s8vx52r2v" path="res://Assets/Menu/Levels/01.png" id="2_i20hp"]
[ext_resource type="Texture2D" uid="uid://cpper0dj8bw0i" path="res://Assets/Menu/Buttons/Back.png" id="3_8niti"]
[ext_resource type="Texture2D" uid="uid://d2dy4x278w2w5" path="res://Assets/Menu/Levels/02.png" id="4_52rrw"]

[node name="Levels" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6is4l")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_7mhej")
stretch_mode = 1

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -351.0
offset_top = -349.0
offset_right = 381.0
offset_bottom = -184.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 150
text = "Select Levels"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -374.5
offset_top = -99.0
offset_right = 374.5
offset_bottom = 291.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 18

[node name="Level 1" type="Button" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.2, 0.2, 0.2, 1)
theme_override_colors/font_hover_color = Color(0.619608, 0.619608, 0.619608, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 80
text = "Level 1"
icon = ExtResource("2_i20hp")
alignment = 0
icon_alignment = 2
expand_icon = true

[node name="Level 2" type="Button" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.2, 0.2, 0.2, 1)
theme_override_colors/font_hover_color = Color(0.619608, 0.619608, 0.619608, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 80
text = "Level 2"
icon = ExtResource("4_52rrw")
alignment = 0
icon_alignment = 2
expand_icon = true

[node name="Back" type="Button" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.2, 0.2, 0.2, 1)
theme_override_colors/font_hover_color = Color(0.619608, 0.619608, 0.619608, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 80
text = "Back"
icon = ExtResource("3_8niti")
alignment = 0
icon_alignment = 2
expand_icon = true

[connection signal="pressed" from="VBoxContainer/Level 1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="VBoxContainer/Level 2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_back_pressed"]
